fix center aligning photos

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 .column {
   flex: 50%;
   max-width: 50%;
-  padding 0 4px;
+  padding: 0 10px;
 }
 
 .column.full-width {
@@ -23,7 +23,7 @@
 }
 
 img {
-    max-width: 95%;
+    max-width: 100%;
     padding-top: 10px;
 }
 
